# BetterMinds

./: .env.example  pyproject.toml  requirements.txt  vercel.json
api/: index.py
api/templates/: auth.html  callback.html  index.html
templates/: auth.html  callback.html  index.html
